[tool.poetry]
name = "twitter-api-proxy"
version = "0.1.0"
description = ""
authors = ["videah <videah@selfish.systems>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
tweepy = "^4.4.0"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
